Fix - Unclickable arrow on narrow screen size

--- a/src/components/DetailView.scss
+++ b/src/components/DetailView.scss
@@ -76,6 +76,7 @@
       right: 10%;
       padding: 5rem;
       padding-right: 8%; // Allows basic data to stay relatively center on iPhone 6 screen
+      z-index: 5;
       
       .pokeTypes {
         min-width: 10.5rem;
